<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6000BCD4"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="208dp">
    <ImageView
        android:id="@+id/pizzaImageView"
        android:layout_width="197dp"
        android:layout_height="146dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload"
        tools:srcCompat="@drawable/pizza_options" />
    <TextView
        android:id="@+id/styleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaImageView"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/flavorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaImageView"
        app:layout_constraintTop_toBottomOf="@+id/styleTextView" />
    <TextView
        android:id="@+id/crustTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaImageView"
        app:layout_constraintTop_toBottomOf="@+id/flavorTextView" />
    <RadioGroup
        android:id="@+id/sizeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImageView">
        <RadioButton
            android:id="@+id/smallSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small_radio_button_label"
            android:gravity="center"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/mediumSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_radio_button_label"
            android:gravity="center"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/largeSizeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/large_radio_button_label"
            android:gravity="center"
            android:textSize="20sp" />
    </RadioGroup>
    <ListView
        android:id="@+id/toppingsListView"
        android:layout_width="191dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeRadioGroup" />
    <TextView
        android:id="@+id/pizzaSubtotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingsListView" />
    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/add_to_order_button"
        app:layout_constraintEnd_toEndOf="@+id/toppingsListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaSubtotalTextView" />
    <ListView
        android:id="@+id/availableToppingsListView"
        android:layout_width="199dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toppingsListView" />
    <TextView
        android:id="@+id/addToppingTextPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_add_topping_direction"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/availableToppingsListView"
        app:layout_constraintEnd_toEndOf="@+id/availableToppingsListView"
        app:layout_constraintStart_toStartOf="@+id/availableToppingsListView" />
    <TextView
        android:id="@+id/removeToppingTextPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_remove_topping_direction"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/toppingsListView"
        app:layout_constraintEnd_toEndOf="@+id/toppingsListView"
        app:layout_constraintStart_toStartOf="@+id/toppingsListView" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/available_toppings_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addToppingTextPrompt"
        app:layout_constraintEnd_toStartOf="@+id/toppingsListView"
        app:layout_constraintStart_toStartOf="@+id/availableToppingsListView" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_toppings_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/removeToppingTextPrompt"
        app:layout_constraintEnd_toEndOf="@+id/toppingsListView"
        app:layout_constraintStart_toStartOf="@+id/toppingsListView" />
</androidx.constraintlayout.widget.ConstraintLayout>