<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6000BCD4"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="208dp">

    <ListView
        android:id="@+id/currentOrderPizzaListView"
        android:layout_width="364dp"
        android:layout_height="276dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/removeAllPizzasButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/remove_all_pizzas_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/currentOrderTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/currentOrderTaxTextView"
        app:layout_constraintStart_toStartOf="@+id/currentOrderTaxTextView"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderTaxTextView" />

    <TextView
        android:id="@+id/currentOrderTaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/currentOrderSubtotalTextView"
        app:layout_constraintStart_toStartOf="@+id/currentOrderSubtotalTextView"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderSubtotalTextView" />

    <TextView
        android:id="@+id/currentOrderSubtotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAllPizzasButton" />

    <Button
        android:id="@+id/submitOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/submit_order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderTotalTextView"
        app:strokeColor="#FF0000" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/current_order_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/click_pizza_direction"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderPizzaListView" />

</androidx.constraintlayout.widget.ConstraintLayout>