<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6000BCD4"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="208dp">

    <ImageButton
        android:id="@+id/pizzaOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/currentOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        android:text="@string/order_pizzas_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaOrderButton" />

    <ImageButton
        android:id="@+id/currentOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        android:text="@string/view_current_order_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderButton" />

    <ImageButton
        android:id="@+id/storeOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderButton"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingLeft="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="4dp"
        android:paddingBottom="16dp"
        android:text="@string/view_store_orders_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersButton" />

</androidx.constraintlayout.widget.ConstraintLayout>